<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_personal_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.techno.matrimonial.CustomUi.MyTitleTextView
                android:id="@+id/tvRelationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/layout_bg_bi"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">

            <com.techno.matrimonial.CustomUi.MyTitleTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/txt_ci_name" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/txts_details_divider" />

            <TextView
                android:id="@+id/tvCandidateName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text=""
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/layout_bg_bi"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">

            <com.techno.matrimonial.CustomUi.MyTitleTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/txt_ci_phone" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/txts_details_divider" />

            <TextView
                android:id="@+id/tvCandidatePhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:layout_marginLeft="@dimen/_5sdp"
                android:drawableRight="@drawable/ic_phone"
                android:text=""
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/layout_bg_bi"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">

            <com.techno.matrimonial.CustomUi.MyTitleTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/txt_ci_email" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/txts_details_divider" />

            <TextView
                android:id="@+id/tvCandidateEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:text=""
                android:layout_marginLeft="@dimen/_5sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/layout_bg_bi"
            android:orientation="horizontal"
            android:padding="@dimen/_3sdp">

            <com.techno.matrimonial.CustomUi.MyTitleTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:text="@string/txt_ci_city" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/txts_details_divider" />

            <TextView
                android:id="@+id/tvCandidateCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:text=""
                android:layout_marginLeft="@dimen/_5sdp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>