<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_main_back"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        card_view:cardCornerRadius="7dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/layout_boys_more_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/main_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/sdBRProfile"
                            android:layout_width="@dimen/_90sdp"
                            android:layout_height="@dimen/_95sdp"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/btn_login"
                            fresco:roundAsgirls_profile="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_15sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />

                            <com.techno.matrimonial.CustomUi.MyTitleTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:text=" Height, "
                                android:textSize="@dimen/_10sdp" />

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />

                            <com.techno.matrimonial.CustomUi.MyTitleTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:text=" Weight"
                                android:textSize="@dimen/_10sdp" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.techno.matrimonial.CustomUi.MyTitleTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="BirthDate:"
                                android:textSize="@dimen/_10sdp" />

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRDOB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />

                            <com.techno.matrimonial.CustomUi.MyTitleTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text=" Years"
                                android:textSize="@dimen/_10sdp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.techno.matrimonial.CustomUi.MyTitleTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Hindu:"
                                android:textSize="@dimen/_10sdp" />

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRcast"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.techno.matrimonial.CustomUi.MyTitleTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Live In:"
                                android:textSize="@dimen/_10sdp" />

                            <com.techno.matrimonial.CustomUi.MyMainTextView
                                android:id="@+id/tvBRlocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_2sdp"
                                android:ellipsize="end"
                                android:maxLines="1"
                                android:text="@string/default_txt"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/mian_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_layout_1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_5sdp">

                    <Button
                        android:id="@+id/btnBRsortlist"
                        android:layout_width="@dimen/_90sdp"
                        android:layout_height="wrap_content"
                        android:background="@color/btn_login"
                        android:text="@string/btn_shortlist"
                        android:textAllCaps="false"
                        android:textColor="@color/btn_sortlist_font" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:background="@android:color/transparent"
                        android:drawableRight="@drawable/moreinfo"
                        android:maxLines="1"
                        android:text="@string/txt_more_info"
                        android:textAllCaps="false"
                        android:textColor="@color/btn_sortlist_font"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>